--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "plant selling website ",
   "main": "index.js",
   "scripts": {
-    "start":"node server.js",
+    "start": "node server.js",
     "devStart": "nodemon server.js"
   },
   "repository": {
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "mongoose": "^5.11.15"
   },
   "devDependencies": {
