--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "mongoose": "^5.11.15"
+    "express-session": "^1.17.1",
+    "mongoose": "^5.11.15",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.7"
   }
 }
