--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
     "mongoose": "^5.11.15",
+    "nodemailer": "^6.6.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
